--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -3651,7 +3651,7 @@ input[type="submit"].btn.btn-mini {
   margin-left: -20px;
   font-size: 20px;
   font-weight: 200;
-  color: #bbbfc2;
+  color: #0e90d2;
   text-shadow: 0 1px 0 #3a3f44;
 }
 .navbar .brand:hover {
@@ -3660,7 +3660,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-text {
   margin-bottom: 0;
   line-height: 40px;
-  color: #c8c8c8;
+  color: #0e90d2;
 }
 .navbar-link {
   color: #c8c8c8;
@@ -3987,7 +3987,7 @@ input[type="submit"].btn.btn-mini {
   color: #ffffff;
 }
 .navbar-inverse .brand {
-  color: #7a8288;
+  color: #0e90d2;
 }
 .navbar-inverse .navbar-text {
   color: #7a8288;
